--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -10,9 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
-    - name: Setup Java
+    - uses: actions/checkout@v2
+    - name: Set up Java
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
