--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout GitHub repo
+      uses: actions/checkout@v2
     - name: Set up Java
       uses: actions/setup-java@v1
       with:
