--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
 
     <properties>
         <slf4j.version>1.7.32</slf4j.version>
-
         <logback.version>1.2.5</logback.version>
-        <junit.version>4.13.2</junit.version>
+
+        <junit.version>5.7.2</junit.version>
+        <assertj.version>3.20.2</assertj.version>
         <selenium-java.version>3.141.59</selenium-java.version>
         <wdm.version>5.0.0-SNAPSHOT</wdm.version>
 
@@ -32,18 +33,23 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
