--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <properties>
         <slf4j.version>2.0.0</slf4j.version>
-        <logback.version>1.2.11</logback.version>
+        <logback.version>1.3.0-beta0</logback.version>
 
         <junit.version>5.9.0</junit.version>
         <assertj.version>3.23.1</assertj.version>
